Implement an endpoint to delete room
